# qtvkbd

./: .gitignore  AUTHORS  CMakeCache.txt  CMakeLists.txt  ChangeLog  INSTALL  Makefile  README.md  cmake_install.cmake  install_manifest.txt  qtvkbd.kdev4  qtvkbd.pro
colors/: CMakeLists.txt  Makefile  cmake_install.cmake  droid.css  simple.css
doc/: CMakeLists.txt
src/: CMakeLists.txt  Makefile  cmake_install.cmake  dockadaptor.cpp  dockadaptor.h  dockadaptor.moc  dockadaptor.moc_parameters  dragwidget.cpp  kbddock.cpp  kbddock.h  kbdtray.cpp  kbdtray.h  main.cpp  mainwidget.cpp  org.kde.qtvkbd.Dock.xml  org.kde.qtvkbd.Qtvkbd.xml  qrc_resources.cpp  qtvkbd  qtvkbd.desktop  qtvkbdadaptor.cpp  qtvkbdadaptor.h  qtvkbdadaptor.moc  qtvkbdadaptor.moc_parameters  qtvkbdapp.cpp  qtvkbdapp.h  resizabledragwidget.cpp  resources.qrc  sliderdialog.cpp  sliderdialog.h  standart.xml  themeloader.cpp  vbutton.cpp  vbutton.h  vkeyboard.cpp  vkeyboard.h  x11keyboard.cpp  x11keyboard.h
src/qtvkbd_autogen/: moc_predefs.h  mocs_compilation.cpp
src/qtvkbd_autogen/EWIEGA46WW/: moc_dragwidget.cpp  moc_dragwidget.cpp.d  moc_kbddock.cpp  moc_kbddock.cpp.d  moc_kbdtray.cpp  moc_kbdtray.cpp.d  moc_mainwidget.cpp  moc_mainwidget.cpp.d  moc_qtvkbdapp.cpp  moc_qtvkbdapp.cpp.d  moc_resizabledragwidget.cpp  moc_resizabledragwidget.cpp.d  moc_themeloader.cpp  moc_themeloader.cpp.d  moc_vbutton.cpp  moc_vbutton.cpp.d  moc_vkeyboard.cpp  moc_vkeyboard.cpp.d  moc_x11keyboard.cpp  moc_x11keyboard.cpp.d
themes/: CMakeLists.txt  Makefile  cmake_install.cmake  standart.xml
